# auth-gateway-serverkit

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
src/auth_gateway_serverkit/: aiohttp_client.py  email.py  http_client.py
src/auth_gateway_serverkit/keycloak/: README.md  api.py  authorization.py  client.py  client_api.py  initializer.py  manager.py  organization.py  realm.py  role.py  user.py
src/auth_gateway_serverkit/middleware/: auth.py  fb_auth.py  rbac.py  schemas.py
