[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "auth_gateway_serverkit"
version = "0.0.82"
authors = [
    { name = "Echo298327", email = "shalomber17@gmail.com" }
]
description = "serverkit for auth-gateway-fastapi-keycloak repository"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'fastapi==0.128.0',
    'httpx==0.28.1',
    'aiohttp==3.13.3',
    'pydantic==2.12.5',
    'pydantic_settings==2.12.0',
    'pydantic[email]',
    'python-keycloak==3.9.1',
    'PyJWT==2.11.0',
    'python-dotenv==1.0.1',
    'firebase_admin==6.5.0',
    'python-multipart'
]

[project.urls]
Homepage = "https://github.com/Echo298327/auth-gateway-serverkit"

[tool.setuptools]
packages = [
    "auth_gateway_serverkit",
    "auth_gateway_serverkit.middleware",
    "auth_gateway_serverkit.keycloak",
    "auth_gateway_serverkit.firebase",
]
package-dir = {"" = "src"}
